HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodWellFormedness/Source/Main.uv
//! Rejected method specimen for record-method declaration well-formedness.

public record RecordMethodWellFormedOwner {
    public value: i32

    public procedure readValue(self: i32) -> i32 {
        return self
    }
}
